# pyrpg

./: .gitignore  AGENTS.md  ANALYSIS_SUMMARY.txt  CLAUDE.md  CODEBASE_FILE_MAP.md  DIALOG_OVERLAY_PATTERNS.md  DIALOG_OVERLAY_QUICK_REFERENCE.md  MONSTER_CLASS_ANALYSIS.md  NOTIFICATION_DOCS_INDEX.md  NOTIFICATION_RESEARCH_SUMMARY.txt  ONBOARDING.md  QUICKSTART.md  README.md  README_ANALYSIS.md  game.py  main.py  models.py  prp-planning-creategemini.md  ui_components.py
.beads/: issues.jsonl
.cache/clangd/index/: AdventurePage.cpp.244E9469D23FFA59.idx  AdventurePage.h.B21AD1E7DAF0FC35.idx  AnimatedProgressBar.cpp.70DE5C4F4D03EC48.idx  AnimatedProgressBar.h.A1D7582A59E7FC08.idx  Character.cpp.CF5FDA8A33CC9768.idx  Character.h.B3C2EB0759EA4F5D.idx  CharacterCustomizationPage.cpp.1E3760C82DE336C6.idx  CharacterCustomizationPage.h.9CD80E48BB08779B.idx  CharacterPreviewWidget.cpp.4AF3443CD38202D2.idx  CharacterPreviewWidget.h.9C98A703C31521B5.idx  CombatPage.cpp.48974CB5CA80E1A7.idx  CombatPage.h.603EACA755E1C61E.idx  CustomizationSection.cpp.C210C148C2E00A1E.idx  CustomizationSection.h.3D68E06C018A9C15.idx  Game.cpp.A246EBD791F2BA12.idx  Game.h.3D9FE6679BD345DC.idx  InventoryPage.cpp.BDE87F755F8B1291.idx  InventoryPage.h.BD8DE7DCE0349C61.idx  Item.cpp.5A28E5DE7A004B11.idx  Item.h.9D930C42578E4E0A.idx  ItemCard.cpp.E78176CAD3FA7B15.idx  ItemCard.h.EF34F29A27F55F10.idx  ItemFactory.cpp.D469815B532BC90B.idx  ItemFactory.h.A25A324017381EAC.idx  ItemSelectionOverlay.cpp.B7433D64C3E53BE5.idx  ItemSelectionOverlay.h.5B2D89C3348F28A6.idx  LogDisplay.cpp.7C3A10046493BCAA.idx  LogDisplay.h.9C9FCE02B8D091D7.idx  MainWindow.cpp.C90A6CFBA3BB107F.idx  MainWindow.h.AFD9396A262AF414.idx  Monster.cpp.7B1874BFD4E6CB9E.idx  Monster.h.31D39A97655C9560.idx  MonsterStatsPage.cpp.4C93448E89A53609.idx  (+30 more)
PRPs/: battle-animations-impl.md  battle-animations-phase2.md  battle-animations-phase3.md  battle-animations-prd.md  keyboard-shortcuts-prd.md  keyboard-shortcuts.md  launch-cutscene-prd.md  monster-quest-alignment-implement.md  monster-quest-alignment-prd.md  storyline-quest-system-phase1.md  storyline-quest-system-phase3.md  storyline-quest-system-phase4.md  storyline-quest-system-phase5.md  storyline-quest-system-prd.md
PRPs/ai_docs/: qt_key_handling.md
PRPs/code_reviews/: review1.md  review2.md  review3.md  review4.md  review5.md
TASK_PRP/PRPs/: quest_onboarding_tutorial.md
cpp-qt-rpg/: CLAUDE.md  CMakeLists.txt  NOTIFICATION_PATTERNS.md  NOTIFICATION_PATTERNS.yaml  assets.qrc  generate_hero_sprites.py  regenerate_sprites.py
cpp-qt-rpg/src/: MainWindow.cpp  MainWindow.h  main.cpp
cpp-qt-rpg/src/components/: AnimatedProgressBar.cpp  AnimatedProgressBar.h  AnimationManager.cpp  AnimationManager.h  CharacterPreviewWidget.cpp  CharacterPreviewWidget.h  CombatItemDialog.cpp  CombatItemDialog.h  CombatResultDialog.cpp  CombatResultDialog.h  CustomizationSection.cpp  CustomizationSection.h  ItemCard.cpp  ItemCard.h  ItemSelectionOverlay.cpp  ItemSelectionOverlay.h  LogDisplay.cpp  LogDisplay.h  MenuOverlay.cpp  MenuOverlay.h  ParticleSystem.cpp  ParticleSystem.h  PointOfNoReturnDialog.cpp  PointOfNoReturnDialog.h  QuestCompletionDialog.cpp  QuestCompletionDialog.h  ScalablePixmapLabel.cpp  ScalablePixmapLabel.h  ShadowedProgressBar.cpp  ShadowedProgressBar.h  SkillSelectionDialog.cpp  SkillSelectionDialog.h  StatusIndicator.cpp  StatusIndicator.h  ValidationLabel.cpp  ValidationLabel.h
cpp-qt-rpg/src/game/: CodexManager.cpp  CodexManager.h  DialogueManager.cpp  DialogueManager.h  Game.cpp  Game.h  QuestManager.cpp  QuestManager.h  StoryManager.cpp  StoryManager.h
cpp-qt-rpg/src/game/factories/: DialogueFactory.cpp  DialogueFactory.h  ItemFactory.cpp  ItemFactory.h  LoreFactory.cpp  LoreFactory.h  MonsterFactory.cpp  MonsterFactory.h  MonsterTypeRegistry.cpp  MonsterTypeRegistry.h  QuestFactory.cpp  QuestFactory.h  SkillFactory.cpp  SkillFactory.h  StoryEventFactory.cpp  StoryEventFactory.h
cpp-qt-rpg/src/models/: Character.cpp  Character.h  DialogueData.cpp  DialogueData.h  FinalBoss.cpp  FinalBoss.h  Item.cpp  Item.h  LoreEntry.h  Monster.cpp  Monster.h  Player.cpp  Player.h  Quest.cpp  Quest.h  Skill.cpp  Skill.h  StoryEvent.h
cpp-qt-rpg/src/persistence/: SaveManager.cpp  SaveManager.h
cpp-qt-rpg/src/theme/: Theme.h
cpp-qt-rpg/src/views/: AdventurePage.cpp  AdventurePage.h  CharacterCustomizationPage.cpp  CharacterCustomizationPage.h  CombatPage.cpp  CombatPage.h  DialogueView.cpp  DialogueView.h  InventoryPage.cpp  InventoryPage.h  LoreBookPage.cpp  LoreBookPage.h  MainMenu.cpp  MainMenu.h  MonsterStatsPage.cpp  MonsterStatsPage.h  NewGameView.cpp  NewGameView.h  QuestLogPage.cpp  QuestLogPage.h  SaveLoadPage.cpp  SaveLoadPage.h  ShopPage.cpp  ShopPage.h  StatsPage.cpp  StatsPage.h  StoryEventDialog.cpp  StoryEventDialog.h  VictoryScreen.cpp  VictoryScreen.h
cpp-qt-rpg/tests/: TestBase.cpp  TestBase.h  TestUtils.cpp  TestUtils.h  test_combat_page_dual_mode.cpp  test_edge_cases.cpp  test_inventory_shortcuts.cpp  test_item_lore.cpp  test_lore_discovery.cpp  test_main.cpp  test_mainwindow.cpp  test_models.cpp  test_monster_factory.cpp  test_navigation_flow.cpp  test_persistence.cpp  test_quest_models.cpp  test_quest_system.cpp  test_saveload_shortcuts.cpp  test_shop_shortcuts.cpp  test_skill_usage.cpp  test_test_utils_demo.cpp
game/: customization.py  game.py  items.py  models.py  save_load.py
saves/: asdasd.json  asdfasdf.json  customization.json  qwerqwer.json
tasks/: 0001-prd-enhanced-gameplay.md  0002-prd-cpp-qt-refactor.md  tasks-0001-prd-enhanced-gameplay.md  tasks-0002-prd-cpp-qt-refactor.md
tests/: test_customization.py  test_monster_stats.py  test_save_load.py
ui/: constants.py  controllers.py  custom_widgets.py  main_window.py  styles.qss  theme.py  widgets.py
ui/components/: __init__.py  log_display.py  particles.py  status_indicator.py  validation_label.py
ui/views/: adventure_page.py  character_customization_page.py  combat_page.py  inventory_page.py  monster_stats_page.py  new_game_view.py  save_load_page.py  shop_page.py  stats_page.py
